# zkmatrix-pool-protocol

./: Cargo.toml  README.md  build.rs
environment/: Cargo.toml
environment/src/: lib.rs
examples/: connect.rs
src/: lib.rs
src/environment/: mod.rs
src/examples/: connect.rs
src/message/: error.rs  mod.rs  pool_errors.rs  response.rs  speed.rs  stratum.rs
src/utils/: convert.rs  job_id.rs  mod.rs  notify.rs  speed.rs
