[package]
name = "zkwork-pool-protocol"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
serde = "1.0.138"
serde_json = "1.0.82"
erased-serde = "0.3.21"
json-rpc-types = "1.0.3"
bytes = "1.1.0"
semver = "1.0.12"
anyhow = "1"
lazy_static = "1.4.0"

[dev-dependencies]
tokio = { version = "1", features = ["sync"] }
futures-util = "0.3"

[build-dependencies]
vergen = { version = "7.2.1", default-features = false, features = ["build"] }

[dependencies.snarkos]
git = "https://github.com/ABMatrix/snarkOS.git"
branch = "ABMatrix/testnet3"

[dependencies.snarkvm]
git = "https://github.com/ABMatrix/snarkVM.git"
branch = "ABMatrix/testnet2"

[dependencies.tokio-util]
version = "0.7.3"
features = ["codec"]

[[example]]
name = "connect"
path = "./examples/connect.rs"
