[package]
name = "zkmatrix-pool-protocol"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
serde = "1.0.138"
serde_json = "1.0.82"
erased-serde = "0.3.21"
json-rpc-types = "1.0.3"
bytes = "1.1.0"
semver = "1.0.12"
anyhow = "1"
lazy_static = "1.4.0"
hex = "0.4.3"

[dev-dependencies]
tokio = { version = "1", features = ["sync", "net", "time", "macros", "rt", "rt-multi-thread"] }
futures-util = { version = "0.3", features= ["sink"] }

[build-dependencies]
vergen = { version = "7.2.1", default-features = false, features = ["build"] }

[dependencies.tokio-util]
version = "0.7.3"
features = ["codec"]

[[example]]
name = "connect"
path = "./examples/connect.rs"
