[package]
name = "zkmatrix-pool-protocol"
version = "0.4.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
serde = "1.0.138"
serde_json = "1.0.82"
erased-serde = "0.3.21"
json-rpc-types = "1.0.3"
bytes = "1.1.0"
semver = "1.0.12"
anyhow = "1"
lazy_static = "1.4.0"
hex = "0.4.3"

[dev-dependencies]
tokio = { version = "1", features = ["sync", "net", "time", "macros", "rt", "rt-multi-thread"] }
futures-util = { version = "0.3", features = ["sink"] }
rand = "0.8.5"

[dev-dependencies.snarkvm-compiler]
git = "https://github.com/ABMatrix/snarkVM.git"
branch = "ABMatrix/new-posw-prover"
features = ["setup"]

[dev-dependencies.snarkvm-curves]
git = "https://github.com/ABMatrix/snarkVM.git"
branch = "ABMatrix/new-posw-prover"

[dev-dependencies.snarkvm-algorithms]
git = "https://github.com/ABMatrix/snarkVM.git"
branch = "ABMatrix/new-posw-prover"

[dev-dependencies.snarkvm-utilities]
git = "https://github.com/ABMatrix/snarkVM.git"
branch = "ABMatrix/new-posw-prover"

[dev-dependencies.snarkvm-console]
git = "https://github.com/ABMatrix/snarkVM.git"
branch = "ABMatrix/new-posw-prover"

[build-dependencies]
vergen = { version = "7.4.2", default-features = false, features = ["build"] }


[dependencies.tokio-util]
version = "0.7.3"
features = ["codec"]

[profile.test]
opt-level = 3
lto = "thin"
incremental = true
debug = true
debug-assertions = true

[[example]]
name = "connect"
path = "./examples/connect.rs"
